--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ coverage.json
 
 # IDE
 .idea
+
+.DS_Store
+.project
+.settings
+audit/test/testchain/geth
+audit/test/testchain/geth.ipc
+audit/test/testchain/history
+audit/test/contracts
+private
